@@ -51,54 +51,60 @@ public class Car {
 
     @JsonPOJOBuilder(withPrefix = "set")
     public static class Builder {
+        private static final int MIN_YEAR = 1886;
+        private static final int MAX_YEAR = java.time.Year.now().getValue() + 1;
+        private static final double MIN_POWER = 1.0;
+        private static final double MAX_POWER = 2000.0;
+        private static final int MAX_MODEL_LENGTH = 100;
         private double power;
         private String model;
         private int year;
 
-        // В СЕТАХ ЛЮБЫЕ ПРОВЕРКИ и null
         public Builder setModel(String model) {
-            if (model == null || model.trim().isEmpty()) {
+            if (model == null || model.isBlank()) {
                 throw new IllegalArgumentException("Модель не может быть пустой");
             }
-
-            this.model = model;
-
+            String trimmed = model.trim();
+            if (trimmed.length() > MAX_MODEL_LENGTH) {
+                throw new IllegalArgumentException(
+                        "Модель не может быть длиннее " + MAX_MODEL_LENGTH + " символов");
+            }
+            this.model = trimmed;
             return this;
+
         }
 
         public Builder setYear(int year) {
-            if (year < 2000) {
-                throw new IllegalArgumentException("Год должен быть >= 2000");
+            if (year < MIN_YEAR || year > MAX_YEAR) {
+                throw new IllegalArgumentException(
+                        "Год должен быть в диапазоне [" + MIN_YEAR + ", " + MAX_YEAR + "], получено: " + year);
             }
-
             this.year = year;
-
             return this;
         }
 
         public Builder setPower(double power) {
-            if (power <= 0) {
-                throw new IllegalArgumentException("Мощность должна быть положительной");
+            if (Double.isNaN(power) || Double.isInfinite(power)) {
+                throw new IllegalArgumentException("Мощность должна быть конечным числом");
             }
-
+            if (power < MIN_POWER || power > MAX_POWER) {
+                throw new IllegalArgumentException(
+                        "Мощность должна быть в диапазоне [" + MIN_POWER + ", " + MAX_POWER + "], получено: " + power);
+            }
             this.power = power;
-
             return this;
         }
 
         public Car build() {
-            if (model == null || model.trim().isEmpty()) {
+            if (model == null) {
                 throw new IllegalStateException("Модель не задана");
             }
-
             if (year == 0) {
                 throw new IllegalStateException("Год не задан");
             }
-
             if (power == 0) {
                 throw new IllegalStateException("Мощность не задана");
             }
-
             return new Car(this);
         }
     }
